@@ -10,6 +10,7 @@ $Id$
 	- Fix Seagate Barracuda 2.5 5400 regexp to add new models and
 	  avoid false matches (#796)
 	- Add Seagate IronWolf HDD  series (#760)
+	- Fix attribute 183 for the Seagate Barracuda 2.5 5400 HDD (#816)
 
 2017-10-08  Alex Samorukov <samm@os2.kiev.ua>
 
